got some java script working and adding more div ID's

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ side {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-#guess > div {
+#empty{
     background: radial-gradient(closest-side, #000000, #262a23, #514b45);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 90%;
