--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ main>div {
     border: 2px solid black;
     border-radius: 10%;
 }
+
 #master-cell {
     background: linear-gradient(0.24turn, #4e2a13b1, #60c26da3, #5e4635c3);
 }
@@ -72,48 +73,71 @@ side {
     grid-template-rows: 1fr 1fr 1fr 1fr;
     padding: 0.4vmin 1.2vmin;
 }
+
 .greeting {
     position: absolute;
     margin-top: -50vmin;
     right: 67%;
-    background: radial-gradient(circle at 50% 50%,#6e6e48 1px, #898072 2%,rgba(105, 140, 105, 0.648) 50%, #484128db 100%);
+    background: radial-gradient(circle at 50% 50%, #6e6e48 1px, #898072 2%, rgba(105, 140, 105, 0.648) 50%, #484128db 100%);
     text-align: center;
     box-shadow: 1vmin 1vmin 1vmin #230c0cd5;
     border-radius: 25%;
-    padding: 3vmin; 
+    padding: 3vmin;
 }
-.greeting > div{
+
+.greeting>div {
     font-weight: 900;
-    color:#acb57de7; 
+    color: #acb57de7;
     font-family: 'BioRhyme', serif;
     font-size: 3.5vmin;
     text-align: center;
     text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
-    
+
 }
-.greeting > a{
+
+.greeting>a {
     font-family: 'BioRhyme', serif;
     font-weight: 500;
     font-size: 2vmin;
     color: #d0d7acf3;
 
 }
+
 .greeting-rules {
     transition: .5s;
-    width: 30vmin;
+    width: 40vmin;
+    height: 40vmin;
     position: absolute;
     margin-top: -40vmin;
     text-align: center;
-    color:#d0d7acf3; 
+    color: #d0d7acf3;
     right: 67%;
     font-weight: 500;
     font-size: 2vmin;
     font-family: 'BioRhyme', serif;
     text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
-    background: radial-gradient(circle at 50% 50%,#2d2b21 1px, #554f44 2%,rgba(57, 78, 57, 0.648) 50%, #3a3420db 100%);
+    background: radial-gradient(circle at 50% 50%, #2d2b21 1px, #554f44 2%, rgba(57, 78, 57, 0.648) 50%, #3a3420db 100%);
     box-shadow: 1vmin 1vmin 1vmin #230c0cd5;
     border-radius: 25%;
-    padding: 3vmin; 
+    padding: 3vmin;
+}
+
+.status {
+    transition: .5s;
+    width: 20vmin;
+    position: absolute;
+    top: 10%;
+    text-align: center;
+    color: #d0d7acf3;
+    left: 64%;
+    font-weight: 500;
+    font-size: 2vmin;
+    font-family: 'BioRhyme', serif;
+    text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
+    background: radial-gradient(circle at 50% 50%, #6e6e48 1px, #898072 2%, rgba(105, 140, 105, 0.648) 50%, #484128db 100%);
+    box-shadow: 1vmin 1vmin 1vmin #230c0cd5;
+    border-radius: 25%;
+    padding: 3vmin;
 }
 
 .submit {
@@ -290,18 +314,44 @@ weirdly in firefox and needs its own settings*/
     text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(22, 12, 12, 0.857);
 
 }
+
 .tracker-container {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    margin: 0 0 2vmin 1vmin;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin: 0 0 -4vmin 1vmin;
 }
 
 .tracker {
     height: 6vmin;
     width: 18vmin;
-    color:#c5cbc0;
+    color: #c5cbc0;
     text-shadow: 0.4vmin 0.4vmin 0.4vmin rgb(14, 60, 44);
     line-height: 5vmin;
     font-weight: 900;
     font-family: 'BioRhyme', serif;
+    font-size: 2vmin;
+}
+
+.warning {
+    /* transition: .5s; */
+    opacity: 0;
+    transition: opacity 2s ease-out;
+    /* transition: visibility 0s 2s, opacity 2s linear; */
+    width: 20vmin;
+    margin-top: -2%;
+    margin-bottom: 2%;
+    /* height: 10vmin; */
+    /* visibility: hidden; */
+    line-height: 5.5vmin;
+    text-align: center;
+    color: #d8dfb7;
+    /* left: 64%; */
+    font-weight: 500;
+    font-size: 2vmin;
+    font-family: 'BioRhyme', serif;
+    text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
+    background: radial-gradient(circle at 50% 50%, #d30e00 1px, #7f331e 2%, rgba(132, 137, 36, 0.648) 50%, #563e2bdb 100%);
+    box-shadow: 1vmin 1vmin 1vmin #230c0cd5;
+    border-radius: 25%;
+    /* padding: 3vmin; */
 }
