--- a/css/main.css
+++ b/css/main.css
@@ -220,14 +220,25 @@ side {
 
 .peg-cell-clue {
     display: grid;
+    flex-wrap: wrap;
+    flex-direction: row;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    /* grid-template-areas: "a b c" "d e f" "g h i"; */
-    justify-content: space-around;
     padding: 5%;
     padding-left: 8%;
     height: 6vmin;
     width: 6vmin;
+}
+#flexClue {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    padding-left: 0;
+    width: 100%;
+    height:100%
 }
 
 .peg-cell-guess,
@@ -248,16 +259,17 @@ peg {
     border-radius: 50%;
     width: 90%;
     height: 90%;
-    /* padding: 3%; */
-    /* margin: 3%; */
-    /* margin-top: 10%; */
 }
 
 .empty {
     background: radial-gradient(closest-side, #615e5e, #343930, #1d1a18);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    /* border-radius: 90%; */
-    /* margin: 1vmin; */
+}
+#emptyFlex {
+        background: radial-gradient(closest-side, #615e5e, #343930, #1d1a18);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        height:35%;
+        width: 30%;
 }
 
 .new-game {
