--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ main {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    
     background-color: #05100da4;
     box-shadow: 0.6vmin 0.6vmin 1vmin 0.5vmin rgba(21, 37, 38, 0.816);
     border-radius: 5%;
@@ -66,6 +67,10 @@ main>div {
     background: linear-gradient(0.24turn, #45331ce0, #517767, #8A7F71);
     border: 2px solid black;
     border-radius: 10%;
+}
+#flayer-cells {
+    background: linear-gradient(0.24turn, #67273aed, #4d518fbd, #c2ab92bd); */
+    border: 2px solid rgba(19, 54, 56, 0.822);
 }
 
 #master-cell {
@@ -92,12 +97,15 @@ side {
 .greeting {
     position: absolute;
     margin-top: -50vmin;
-    right: 67%;
     background: radial-gradient(circle at 50% 50%, #6e6e48 1px, #898072 2%, rgba(105, 140, 105, 0.648) 50%, #484128db 100%);
+    right: 67%;
     text-align: center;
     box-shadow: 1vmin 1vmin 1vmin #230c0cd5;
     border-radius: 25%;
     padding: 3vmin;
+}
+#greeting-flayer {
+    background: radial-gradient(circle at 50% 50%, #bacbcbb5 2%, #70bec1b8 50%, #20224ddb 100%);
 }
 
 .greeting>div {
@@ -107,7 +115,10 @@ side {
     font-size: 3.5vmin;
     text-align: center;
     text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
-
+}
+#title {
+    color: #79153db7;
+    text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(55, 116, 107, 0.857);
 }
 
 .greeting>a {
@@ -115,7 +126,9 @@ side {
     font-weight: 500;
     font-size: 2vmin;
     color: #d0d7acf3;
-
+}
+#flayer-click {
+    color: #8d1e4ad9;
 }
 
 .greeting-rules {
@@ -136,23 +149,35 @@ side {
     border-radius: 25%;
     padding: 3vmin;
 }
-
+#flayer-rules {
+    background: radial-gradient(circle at 50% 50%, #bacbcbb5 2%, #7bc7cad9 50%, #2a2d5fcf 100%); 
+    text-shadow: 0.2vmin 0.2vmin 0.2vmin rgba(63, 98, 86, 0.857);
+    color: #641c39dc;
+}
 .status {
     transition: .5s;
     width: 20vmin;
     position: absolute;
     top: 10%;
     text-align: center;
+    
     color: #d0d7acf3;
     left: 64%;
     font-weight: 500;
-    font-size: 2vmin;
+    font-size: 2.4vmin;
     font-family: 'BioRhyme', serif;
-    text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
+    text-shadow: 0.3vmin 0.3vmin 0.2vmin rgba(7, 34, 25, 0.857);
+    /* text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857); */
+    /* background: radial-gradient(circle at 50% 50%,  #807b4fb5 2%, #aa9883c3 50%, #562d42f2 100%); */
     background: radial-gradient(circle at 50% 50%, #6e6e48 1px, #898072 2%, rgba(105, 140, 105, 0.648) 50%, #484128db 100%);
     box-shadow: 1vmin 1vmin 1vmin #230c0cd5;
     border-radius: 25%;
     padding: 3vmin;
+}
+#status-flayer {
+    color: #76d8f0de;
+    text-shadow: 0.4vmin 0.4vmin 0.4vmin rgba(7, 34, 25, 0.857);
+    background: radial-gradient(circle at 50% 50%,  #807b4fb5 2%, #aa9883c3 50%, #562d42f2 100%);
 }
 
 .submit {
@@ -231,6 +256,9 @@ side {
     transition: width 2s;
 }
 #flexClue {
+
+    background: linear-gradient(0.24turn, #67273aed, #4d518fbd, #c2ab92bd); */
+    border: 2px solid rgba(19, 54, 56, 0.822);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -255,7 +283,9 @@ side {
     gap: 5%;
     transition: width 2s;
 }
+#slayer-peg-cell {
 
+}
 peg {
     border-radius: 50%;
     width: 90%;
