--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,10 @@ main>div {
     border: 2px solid rgba(19, 54, 56, 0.822);
 }
 
-#master-cell {
+.master-cell {
     background: linear-gradient(0.24turn, #4e2a13b1, #60c26da3, #5e4635c3);
 }
-.flayer-code-cell {
+#flayer-code-cell {
     background: linear-gradient(0.24turn, #2b3183, #d4b38fa4, #80354bce);
 
 }
@@ -99,8 +99,8 @@ side {
 }
 
 #flayer-side {
-    /* background: linear-gradient(to top right,  #511f34e3,#376f71ad, #1a3d29da); */
-    /* box-shadow: 0.4vmin 0.4vmin 0.4vmin 0.4vmin rgba(7, 28, 30, 0.811); */
+    background: linear-gradient(to top right,  #511f34e3,#376f71ad, #1a3d29da); 
+    box-shadow: 0.4vmin 0.4vmin 0.4vmin 0.4vmin rgba(7, 28, 30, 0.811);
 }
 
 .greeting {
@@ -280,7 +280,7 @@ side {
 }
 
 .peg-cell-guess,
-#master-cell {
+.master-cell {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: space-around;
@@ -315,6 +315,9 @@ peg {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+#flayer-new-game {
+    background: linear-gradient(0.24turn, #67273aed, #4d518fbd, #c2ab92bd);
 }
 
 .ng-button,
